feat: add documentation to list openings
