# handler/response.go
@@ -48,3 +48,8 @@ type ShowOpeningResponse struct {
 	Message string                 `json:"message"`
 	Data    schema.OpeningResponse `json:"data"`
 }
+
+type ListOpeningsResponse struct {
+	Message string                   `json:"message"`
+	Data    []schema.OpeningResponse `json:"data"`
+}
